--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Invoice Generator",
-  "name": "Invoice Generator - John Uberbacher",
+  "name": "Invoice Generator - Peter Paker",
   "icons": [
     {
       "src": "favicon.ico",
